--- a/kecske.html
+++ b/kecske.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Saját név</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="kecske.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="kiemel.css">
         <script src="kecske.js" type="text/javascript"></script>
     </head>
     <body>
@@ -21,9 +21,9 @@ and open the template in the editor.
             <aside id="bal">
                 <h2>Bal part</h2>
                 <p>
-                    <img id="Img" src="kepek/kecske2.jpg">
-                    <img id="Img" src="kepek/kaposzta.jpg">
-                    <img id="Img" src="kepek/farkas.jpg">
+                    <img id="Img" src="kepek/kecske2.png">
+                    <img id="Img" src="kepek/kaposzta.png">
+                    <img id="Img" src="kepek/farkas.png">
 
                 
                 <!-- <img src="kepek/kecske2.png" alt="kecske">
