--- a/kecske.html
+++ b/kecske.html
@@ -21,9 +21,9 @@ and open the template in the editor.
             <aside id="bal">
                 <h2>Bal part</h2>
                 <p>
-                    <img id="Img" src="kepek/kecske2.jpg">
-                    <img id="Img" src="kepek/kaposzta.jpg">
-                    <img id="Img" src="kepek/farkas.jpg">
+                    <img id="Img" src="kepek/kecske2.png">
+                    <img id="Img" src="kepek/kaposzta.png">
+                    <img id="Img" src="kepek/farkas.png">
 
                 
                 <!-- <img src="kepek/kecske2.png" alt="kecske">
